--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rma-repair-tracker",
   "private": true,
-  "version": "0.7.0",
+  "version": "0.8.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,6 +17,7 @@
     "react-color": "^2.19.3",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^3.4.17",
     "vite-plugin-pwa": "^1.0.2",
     "zustand": "^5.0.6"
